# Q-desktop-app

./: package-lock.json  package.json  start_multi_desktop.ps1
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf copy.json  tauri.conf.copy.json  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  events.rs  ipc.rs  lib.rs  main.rs  pool.v1.proto  state_updater.rs  sync_server.v1.proto  sync_server_client.rs  test_webrtc_rs.rs
src-tauri/src/db/: messages_db.rs  mod.rs
src-tauri/src/pool/: cache_manager.rs  client.rs  connection.rs  file_manager.rs  manager.rs  mod.rs  pool_conn.rs  pool_manager.rs  pool_net.rs  pool_node_position.rs  pool_state.rs  sync_server_client.rs  test_drops.rs
src-tauri/src/pool/chunk/: chunk_range.rs  chunk_ranges.rs  chunk_util.rs  mod.rs
src-tauri/src/pool/message_util/: message_checks.rs  message_package_bundle.rs  mod.rs  received_message_queue.rs
src-tauri/src/pool/nat/: nat_checks.rs
src-tauri/src/store/: auth_store.rs  file_store.rs  mod.rs  setting_store.rs  settings_store.rs  store.rs  store_manager.rs  user_store.rs
src/api/: api.ts  auth.schemas.ts  auth.ts  pool.schemas.ts  pool.ts
src/auth/: auth.ts  schemas.ts
src/backend/: backend.model.ts  backend.ts  events.ts  global.ts  ipc.ts
src/store/: pool.store.ts  store.ts
src/store/slices/: pool.action.ts  pool.slice.ts  profile.slice.ts  settings.slice.ts
src/types/: pool.model.ts  pool.v1.ts  sync_server.v1.ts
src/views/auth/: Register.css  Register.tsx
src/views/components/: InputOverlay.css  InputOverlay.tsx  (+1 more)
(+12 files in other folders)
