[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }
prost-build = "0.11.5"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.2", features = ["dialog-open", "http-request"] }
prost = "0.11.5"
tokio = { version = "1.24.1", features = ["time"] }
url = "2.3.1"
tokio-tungstenite = "0.18.0"
bytes = "1.3.0"
parking_lot = "0.12.1"
flume = "0.10.14"
futures-util = "0.3.25"
lazy_static = "1.4.0"
log = "0.4.17"
arc-swap = "1.6.0"
image = "0.24.5"
base64 = "0.21.0"
nanoid = "0.4.0"
anyhow = "1.0.69"
webrtc = "0.6.0"
env_logger = "0.10.0"
rmp-serde = "1.1.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
